# Lensy

./: .gitignore  CLAUDE.md  Lensy-CLAUDE.md  README.md
.claude/: launch.json
.github/workflows/: pages.yml
backend/: pyproject.toml
backend/app/: __init__.py  api.py  main.py
backend/app/pipeline/: __init__.py  blur.py  color.py  compose.py  depth.py  erase_engines.py  grain.py  inpaint.py  layered.py  matte.py  refine.py  runtime.py  segment.py
backend/tests/: test_api.py  test_pipeline.py  test_segment.py
docs/: object-removal-setup.md  research.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  config.ts  controls.ts  depth.ts  erase.ts  main.ts  server.ts
frontend/src/styles/: main.css
scripts/: build.sh  dev.sh  fetch_weights.py  serve.sh  setup.sh
