[project]
name = "lensy-backend"
version = "0.1.0"
description = "Lensy render backend — edge-safe lens blur for still photos (FastAPI + PyTorch MPS)."
requires-python = ">=3.11"

# Core deps are always installed by setup.sh. Heavy/optional model deps degrade gracefully
# (the pipeline detects what's importable at runtime — see backend/app/pipeline/*).
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",   # multipart file upload
    "pillow>=10.2",
    "numpy>=1.26",
    "opencv-contrib-python>=4.9", # contrib => ximgproc.guidedFilter
]

[project.optional-dependencies]
# Installed by setup.sh when present/possible. Failure to install any of these must NOT
# break a basic render — every pipeline stage has a classic fallback.
models = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pymatting>=1.1.12",          # estimate_foreground_ml — the key anti-halo step
    "transformers>=5.0",          # BiRefNet (remote code) + Depth Anything V2 + SAM2 (Sam2Model)
    "timm>=0.9",                  # BiRefNet backbone
    "einops>=0.7",                # BiRefNet remote code dep
    "kornia>=0.7",                # BiRefNet remote code dep
    "huggingface-hub>=0.23",
    "scipy>=1.12",
    "simple-lama-inpainting>=0.1.2",  # LaMa big-lama inpaint
    # Depth Anything V3 runtime deps (the `depth-anything-3` package itself is installed --no-deps
    # by setup.sh to skip its xformers/3D extras; these are the small bits single-image depth needs)
    "omegaconf>=2.3",
    "imageio>=2.34",
    "addict>=2.4",
]
# Object-removal engines beyond LaMa (§ app/pipeline/erase_engines.py). All optional and lazy: a
# missing dep just means that engine falls back to LaMa. ObjectClear also needs the `objectclear`
# package on sys.path and Flux needs a ComfyUI install — both come from the existing
# ~/object-removal-studio layout (overridable via VANISH_* env vars), not pip.
removal = [
    "diffusers>=0.27",          # ObjectClear pipeline (SDXL-based, +shadow/reflection removal)
    "websocket-client>=1.7",    # optional: real per-step % from ComfyUI during a Flux run
]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines tolerated in this personal tool
